# STM32-Platform

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  PLATFORM_INTEGRATION_ISSUES.md  PLATFORM_REVIEW.md  README.md  REVIEW_STATUS.md  cicd report.txt  cubemx_integration.md  issues.md  package_distribution.md  populate-wiki.sh  vscode_extension_spec.md
.github/workflows/: build-extension.yml  ci.yml
Inc/: DbSetFunctions.h  adc.h  callbacks.h  can.h  database.h  hashtable.h  platform_config.h  platform_status.h  spi.h  stm32_platform.h  tim.h  uart.h  utils.h
Src/: DbSetFunctions.c  adc.c  callbacks.c  can.c  database.c  hashtable.c  platform.c  platform_config.c  platform_status.c  spi.c  stm32_platform.c  tim.c  uart.c  utils.c
cmake/: STM32PlatformConfig.cmake.in
docs/: OVERHAUL_SUMMARY.md  api_redesign.md  architecture.md  cmake_build_guide.md  integration_guide.md
examples/: README.md
examples/can_communication/: README.md  main.c
examples/simple_examples/: simple_examples.c
examples/vehicle_control_unit/: main.c
scripts/: validate_cubemx_config.py
templates/: README.md
test-kit/: CMakeLists.txt  tests.yml
tests/: CMakeLists.txt  README.md  test_database.c  test_hashtable.c  test_utils.c
tests/mocks/: stm32_hal_mocks.c  stm32_hal_mocks.h
vscode-extension/: .gitignore  .vscodeignore  INSTALL.md  README.md  package-lock.json  package.json
vscode-extension/scripts/: copy-platform-files.js
vscode-extension/src/: detector.ts  extension.ts  integrator.ts
vscode-extension/test-kit/: README.md  test_example.c
wiki/: API-Reference.md  Architecture.md  Examples.md  Getting-Started.md  Home.md  README.md
